src-errormsg/E25-InfiniteType/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E25-InfiniteType/Plutarch.hs:40:20: error: [GHC-18872]
    • Couldn't match type ‘PList a0’ with ‘PInteger’
        arising from a use of ‘plam’
    • In the first argument of ‘($)’, namely ‘plam’
      In the second argument of ‘(#$)’, namely
        ‘plam
           $ \ self xs
               -> pmatch xs
                    $ \case
                        PNil -> 0
                        PCons x rest
                          -> (pfoldList # plam (\ acc _ -> acc) # 0 # x) + (self # rest)’
      In the expression:
        pfix
          #$
            plam
              $ \ self xs
                  -> pmatch xs
                       $ \case
                           PNil -> 0
                           PCons x rest
                             -> (pfoldList # plam (\ acc _ -> acc) # 0 # x) + (self # rest)
   |
40 | pbadFold = pfix #$ plam $ \self xs ->
   |                    ^^^^

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E25-InfiniteType/Plutarch.hs:43:74: error: [GHC-83865]
    • Couldn't match type ‘PList a0’ with ‘PInteger’
      Expected: Term s (PList PInteger)
        Actual: Term s (PList (PList a0))
    • In the second argument of ‘(#)’, namely ‘rest’
      In the second argument of ‘(+)’, namely ‘(self # rest)’
      In the expression:
        (pfoldList # plam (\ acc _ -> acc) # 0 # x) + (self # rest)
    • Relevant bindings include
        rest :: Term s (PList (PList a0))
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E25-InfiniteType/Plutarch.hs:43:13)
        x :: Term s (PList a0)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E25-InfiniteType/Plutarch.hs:43:11)
        xs :: Term s (PList (PList a0))
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E25-InfiniteType/Plutarch.hs:40:33)
   |
43 |     PCons x rest -> (pfoldList # plam (\acc _ -> acc) # 0 # x) + (self # rest)
   |                                                                          ^^^^
